[package]
name = "holo-auth-notifier"
edition = "2021"
version = "0.1.0"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = ["serde"] }
failure = "0.1"
lazy_static = "1"
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
num_cpus = "=1.16.0"

[dependencies.hpos-config-core]
git = "https://github.com/Holo-Host/hpos-config"
rev = "77d740c83a02e322e670e360eb450076b593b328"

[dependencies.hpos-config-seed-bundle-explorer]
git = "https://github.com/Holo-Host/hpos-config"
rev = "77d740c83a02e322e670e360eb450076b593b328"
